force-app/main/default/objects/CommanderTemplate__c/CommanderTemplate__c.object-meta.xml
<CustomObject>
    <label>Commander Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commander Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>