force-app/main/default/objects/CommanderTemplate__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <description>The name of the asset associated with the template</description>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>