force-app/main/default/objects/CommanderTemplate__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>The template string</description>
    <label>Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>